--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FileCollector": {
       "commandName": "Project",
-      "commandLineArgs": "-XML /TD /PATH"
+      "commandLineArgs": "-CSV /PN +AD"
     }
   }
 }
