--- a/FileLister.csproj
+++ b/FileLister.csproj
@@ -11,6 +11,17 @@
     <PackageProjectUrl>https://github.com/TiredAJ/FileLister</PackageProjectUrl>
     <PackageReadmeFile>Arguments.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/TiredAJ/FileLister</RepositoryUrl>
+    <AssemblyVersion>0.1.1</AssemblyVersion>
+    <FileVersion>0.1.1</FileVersion>
+    <Version>0.1.1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
 
   <ItemGroup>
